--- a/docs/notebooks/intro_notebook.ipynb
+++ b/docs/notebooks/intro_notebook.ipynb
@@ -7,11 +7,9 @@
     "cell_marker": "\"\"\""
    },
    "source": [
-    "# Introducing Jupyter Notebooks\n",
+    "# Pointings-Search\n",
     "\n",
-    "_(The example used here is JamesALeedham's notebook: [intro.ipynb](https://github.com/JamesALeedham/Sphinx-Autosummary-Recursion/blob/master/docs/notebooks/intro.ipynb))_\n",
-    "\n",
-    "First, set up the environment:"
+    "The pointings-search library is an example library of how we can quickly search for geocentric pointings that would see an object with a given barycentric position. Before running this demo make sure to install the development dependencies of pointing-search `pip install .[dev]`"
    ]
   },
   {
@@ -21,18 +19,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib\n",
-    "import matplotlib.pyplot as pl\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "try:\n",
-    "    from IPython import get_ipython\n",
-    "    get_ipython().run_line_magic('matplotlib', 'inline')\n",
-    "except AttributeError:\n",
-    "    print('Magic function can only be used in IPython environment')\n",
-    "    matplotlib.use('Agg')\n",
+    "import astropy.units as u\n",
+    "from astropy.coordinates import (\n",
+    "    SkyCoord,\n",
+    "    SphericalRepresentation,\n",
+    "    get_body_barycentric,\n",
+    ")\n",
+    "from astropy.time import Time\n",
     "\n",
-    "pl.rcParams[\"figure.figsize\"] = [15, 8]"
+    "from pointings_search.pointing_table import PointingTable"
    ]
   },
   {
@@ -43,7 +41,7 @@
     "lines_to_next_cell": 1
    },
    "source": [
-    "Then, define a function that creates a pretty graph:"
+    "The main data structure for pointings-search is a PointingTable which holds information about the geocentric pointings. Each pointing is given by a RA, dec, and time:"
    ]
   },
   {
@@ -55,24 +53,15 @@
    },
    "outputs": [],
    "source": [
-    "def SineAndCosineWaves():\n",
-    "    # Get a large number of X values for a nice smooth curve. Using Pi as np.sin requires radians...\n",
-    "    x = np.linspace(0, 2 * np.pi, 180)\n",
-    "    # Convert radians to degrees to make for a meaningful X axis (1 radian = 57.29* degrees)\n",
-    "    xdeg = 57.29577951308232 * np.array(x)\n",
-    "    # Calculate the sine of each value of X\n",
-    "    y = np.sin(x)\n",
-    "    # Calculate the cosine of each value of X\n",
-    "    z = np.cos(x)\n",
-    "    # Plot the sine wave in blue, using degrees rather than radians on the X axis\n",
-    "    pl.plot(xdeg, y, color='blue', label='Sine wave')\n",
-    "    # Plot the cos wave in green, using degrees rather than radians on the X axis\n",
-    "    pl.plot(xdeg, z, color='green', label='Cosine wave')\n",
-    "    pl.xlabel(\"Degrees\")\n",
-    "    # More sensible X axis values\n",
-    "    pl.xticks(np.arange(0, 361, 45))\n",
-    "    pl.legend()\n",
-    "    pl.show()"
+    "data_dict = {\n",
+    "    \"obsid\": [i for i in range(7)],\n",
+    "    \"ra\": [0.0, 90.0, 45.0, 90.0, 270.0, 223.6095, 223.6095],\n",
+    "    \"dec\": [0.0, 90.0, 0.0, 45.0, 0.0, -16.6230, -16.6230],\n",
+    "    \"obstime\": [60261.0, 60281.1, 60241.2, 60211.3, 60291.4, 60253.1, 60353.1],\n",
+    "    \"fileloc\": [f\"./here{i}.txt\" for i in range(7)],\n",
+    "}\n",
+    "data = PointingTable.from_dict(data_dict)\n",
+    "print(data.pointings)"
    ]
   },
   {
@@ -82,7 +71,7 @@
     "cell_marker": "\"\"\""
    },
    "source": [
-    "Finally, call that function to display the graph:"
+    "We can use helper functions to augment the table with unit vectors indicating the pointing directions and earth's position at each of the observation times."
    ]
   },
   {
@@ -92,8 +81,154 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SineAndCosineWaves()"
+    "data.preprocess_pointing_info()\n",
+    "data.append_earth_pos()\n",
+    "print(data.pointings)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a8306e1",
+   "metadata": {},
+   "source": [
+    "We can plot the various earth positions and pointings in 3-d."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18f02f7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = plt.figure().add_subplot(projection=\"3d\")\n",
+    "\n",
+    "for i in range(len(data.pointings)):\n",
+    "    ax.plot(\n",
+    "        [\n",
+    "            data.pointings[\"earth_vec_x\"][i],\n",
+    "            data.pointings[\"earth_vec_x\"][i] + data.pointings[\"unit_vec_x\"][i] * 0.1,\n",
+    "        ],\n",
+    "        [\n",
+    "            data.pointings[\"earth_vec_y\"][i],\n",
+    "            data.pointings[\"earth_vec_y\"][i] + data.pointings[\"unit_vec_y\"][i] * 0.1,\n",
+    "        ],\n",
+    "        [\n",
+    "            data.pointings[\"earth_vec_z\"][i],\n",
+    "            data.pointings[\"earth_vec_z\"][i] + data.pointings[\"unit_vec_z\"][i] * 0.1,\n",
+    "        ],\n",
+    "        color=\"black\",\n",
+    "    )\n",
+    "\n",
+    "    ax.plot(\n",
+    "        data.pointings[\"earth_vec_x\"][i],\n",
+    "        data.pointings[\"earth_vec_y\"][i],\n",
+    "        data.pointings[\"earth_vec_z\"][i],\n",
+    "        marker=\".\",\n",
+    "        markersize=5,\n",
+    "        color=\"blue\",\n",
+    "    )\n",
+    "\n",
+    "ax.plot(0, 0, 0, marker=\".\", markersize=10, color=\"yellow\")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a63990a",
+   "metadata": {},
+   "source": [
+    "We can extend the diagram by including Mars' at MJD=60253.1. We start by using astropy's `get_body_barycentric()` function to compute approximate barycentric position of both Mars in 3-d cartesian space."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5705d9f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mars_pos_bary = get_body_barycentric(\"mars\", Time(60253.1, format=\"mjd\"))\n",
+    "print(f\"Mars' barycentric position {mars_pos_bary}\")\n",
+    "\n",
+    "ax2 = plt.figure().add_subplot(projection=\"3d\")\n",
+    "\n",
+    "for i in range(len(data.pointings)):\n",
+    "    ax2.plot(\n",
+    "        [\n",
+    "            data.pointings[\"earth_vec_x\"][i],\n",
+    "            data.pointings[\"earth_vec_x\"][i] + data.pointings[\"unit_vec_x\"][i] * 0.1,\n",
+    "        ],\n",
+    "        [\n",
+    "            data.pointings[\"earth_vec_y\"][i],\n",
+    "            data.pointings[\"earth_vec_y\"][i] + data.pointings[\"unit_vec_y\"][i] * 0.1,\n",
+    "        ],\n",
+    "        [\n",
+    "            data.pointings[\"earth_vec_z\"][i],\n",
+    "            data.pointings[\"earth_vec_z\"][i] + data.pointings[\"unit_vec_z\"][i] * 0.1,\n",
+    "        ],\n",
+    "        color=\"black\",\n",
+    "    )\n",
+    "\n",
+    "    ax2.plot(\n",
+    "        data.pointings[\"earth_vec_x\"][i],\n",
+    "        data.pointings[\"earth_vec_y\"][i],\n",
+    "        data.pointings[\"earth_vec_z\"][i],\n",
+    "        marker=\".\",\n",
+    "        markersize=5,\n",
+    "        color=\"blue\",\n",
+    "    )\n",
+    "\n",
+    "ax2.plot(0, 0, 0, marker=\".\", markersize=10, color=\"yellow\")\n",
+    "ax2.plot(\n",
+    "    mars_pos_bary.x.value, mars_pos_bary.y.value, mars_pos_bary.z.value, marker=\".\", markersize=4, color=\"red\"\n",
+    ")\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3d9fcbe",
+   "metadata": {},
+   "source": [
+    "We can compute the angular distance from the heliocentric viewing directions to the target of interest (3-d in heliocentric space) using vector algebra. First we start by converting Mars' cartesian coordinates into spherical coordinates, then we use `PointingTable`'s `search_heliocentric_pointing()` function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1480e1f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ang_dist = data.angular_dist_3d_heliocentric(\n",
+    "    [\n",
+    "        mars_pos_bary.x.value,\n",
+    "        mars_pos_bary.y.value,\n",
+    "        mars_pos_bary.z.value,\n",
+    "    ]\n",
+    ")\n",
+    "print(f\"Raw distances (degrees) = {ang_dist}\\n\")\n",
+    "\n",
+    "# Compute Mars' position as viewed from the barycenter.\n",
+    "mars_coords = SkyCoord(SphericalRepresentation.from_cartesian(mars_pos_bary))\n",
+    "print(f\"Mars' barycentric coordinates: {mars_coords}\\n\")\n",
+    "\n",
+    "# Define the position in terms of RA, dec, and distance.\n",
+    "mars_vec = SkyCoord(ra=mars_coords.ra, dec=mars_coords.dec, distance=mars_coords.distance)\n",
+    "matches = data.search_heliocentric_pointing(mars_vec, 1.0)\n",
+    "print(matches)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54057722",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -101,9 +236,21 @@
    "cell_markers": "\"\"\""
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (.conda-pointings)",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-.conda-pointings-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
